# code-challenge-2024-NirajSalvi

./: .gitignore  Cargo.toml  inital_verified_count.txt  operator_codes.txt  output.txt  output2.txt  p2pkh.txt  run.sh  serialized_transactions.txt  temp.txt  temp2.txt  transaction_types.txt  txid.txt  withtxid.txt
src/: interpreter.rs  main.rs  tx.rs
