[package]
name = "code-challenge-2024-NirajSalvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
sha2 = "0.10.8"
secp256k1 = "0.29.0"
ripemd = "0.1.3"
ecdsa = "0.16.9"
libsecp256k1 = "0.7.1"
num-bigint = "0.4.4"